--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeBom = "2025.03.00"
 composeLivedata = "1.7.8"
 navigation_version = "2.8.9"
 gson_version="2.11.0"
+coil_version="3.0.4"
 
 
 [libraries]
@@ -31,6 +32,8 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-compose-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation_version" }
 gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref ="gson_version"}
+coil = {group = "io.coil-kt.coil3", name = "coil-compose", version.ref ="coil_version"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
