--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,9 @@ activityCompose = "1.10.1"
 composeBom = "2025.03.00"
 composeLivedata = "1.7.8"
 navigation_version = "2.8.9"
-gson_version="2.11.0"
-coil_version="3.0.4"
+gson_version = "2.11.0"
+coil_version = "3.0.4"
+vk_version = "4.1.0"
 
 
 [libraries]
@@ -31,8 +32,10 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation_version" }
-gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref ="gson_version"}
-coil = {group = "io.coil-kt.coil3", name = "coil-compose", version.ref ="coil_version"}
+gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gson_version" }
+coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil_version" }
+vk-core = { group = "com.vk", name = "android-sdk-core", version.ref = "vk_version" }
+vk-api = { group = "com.vk", name = "android-sdk-api", version.ref = "vk_version" }
 
 
 [plugins]
