--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.9.0"
+coilCompose = "3.1.0"
+desugar_jdk_libs = "2.1.5"
 kotlin = "2.1.0"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -12,11 +14,15 @@ composeLivedata = "1.7.8"
 navigation_version = "2.8.9"
 gson_version = "2.11.0"
 coil_version = "3.0.4"
-vk_version = "4.1.0"
-
+okhttpBom = "4.12.0"
+retrofit = "2.11.0"
+sdkVersion = "2.3.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+coil-compose-v310 = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
+coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coilCompose" }
+desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -31,11 +37,15 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-compose-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeLivedata" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation_version" }
 gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "gson_version" }
 coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil_version" }
-vk-core = { group = "com.vk", name = "android-sdk-core", version.ref = "vk_version" }
-vk-api = { group = "com.vk", name = "android-sdk-api", version.ref = "vk_version" }
+okhttp-bom = { module = "com.squareup.okhttp3:okhttp-bom", version.ref = "okhttpBom" }
+onetap-compose = { module = "com.vk.id:onetap-compose", version.ref = "sdkVersion" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+vk-sdk-support = { module = "com.vk.id:vk-sdk-support", version.ref = "sdkVersion" }
+vkid = { module = "com.vk.id:vkid", version.ref = "sdkVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
