--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,22 @@
 [versions]
-agp = "8.9.0"
+agp = "8.9.2"
 coilCompose = "3.1.0"
 desugar_jdk_libs = "2.1.5"
-kotlin = "2.1.0"
-coreKtx = "1.15.0"
+kotlin = "2.1.20"
+kotlin-ksp = "2.1.20-1.0.32"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.03.00"
-composeLivedata = "1.7.8"
+composeBom = "2025.04.01"
+composeLivedata = "1.8.0"
 navigation_version = "2.8.9"
 gson_version = "2.11.0"
-coil_version = "3.0.4"
 okhttpBom = "4.12.0"
 retrofit = "2.11.0"
+daggerVersion = "2.56.2"
 sdkVersion = "2.3.1"
 
 [libraries]
@@ -45,6 +46,8 @@ onetap-compose = { module = "com.vk.id:onetap-compose", version.ref = "sdkVersio
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 vk-sdk-support = { module = "com.vk.id:vk-sdk-support", version.ref = "sdkVersion" }
 vkid = { module = "com.vk.id:vkid", version.ref = "sdkVersion" }
+dagger = { module = "com.google.dagger:dagger", version.ref = "daggerVersion"}
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -52,3 +55,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "kotlin" }
+kotlin-ksp = {id = "com.google.devtools.ksp", version.ref = "kotlin-ksp"}
